[gd_scene load_steps=24 format=2]

[ext_resource path="res://Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Jump.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/kenney_player.png" type="Texture" id=3]
[ext_resource path="res://assets/die.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 96, 96, 96 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "findcoin",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Win",
"speed": 5.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "Win"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Win" ]
}

[sub_resource type="Animation" id=12]
resource_name = "findcoin"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "findcoin" ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "run"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 40, 41 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 45.6478, 41.7715 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 22.2837, 1.27362 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 45.543, 43.5981 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 45.8501, 43.5981 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_mask = 6
script = ExtResource( 1 )
speed = Vector2( 800, 1457 )
stomp_impulse = 1560.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
limit_left = 0
limit_bottom = 1080
limit_smoothed = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -48 )
frames = SubResource( 10 )
animation = "Win"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Win = SubResource( 11 )
anims/findcoin = SubResource( 12 )
anims/idle = SubResource( 13 )
anims/run = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -41 )
shape = SubResource( 15 )

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.337255, 0.223529, 1, 1 )
position = Vector2( 0.529724, -43.7682 )
shape = SubResource( 16 )

[node name="StompDetector" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0.337255, 0.223529, 1, 1 )
position = Vector2( 0.529724, 0 )
shape = SubResource( 17 )

[node name="spikeDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="spikeDetector"]
position = Vector2( 0.529724, -41 )
shape = SubResource( 18 )

[node name="BossDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossDetector"]
position = Vector2( 0.529724, -41 )
shape = SubResource( 19 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="-hp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="StompDetector" to="." method="_on_StompDetector_area_entered"]
[connection signal="body_entered" from="spikeDetector" to="." method="_on_spikeDetector_body_entered"]
[connection signal="body_entered" from="BossDetector" to="." method="_on_BossDetector_body_entered"]
[connection signal="finished" from="Jump" to="." method="_on_Jump_finished"]
